Updated link to case study.

--- a/myWork.html
+++ b/myWork.html
@@ -32,7 +32,7 @@
                 <h3 class="workHeader">TravelEasy Mobile App</h3>
                 <img class="workPic" src="images/temp.png">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-                <button class="learnMoreButton" type="button" onclick="alert('This will direct to project.')">LEARN MORE</button>
+                <button class="learnMoreButton" type="button" onclick="location.href='travelEasy.html'">LEARN MORE</button>
               </div>
             </div>
             <div class="work_2">
